# sweam

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  Notes.md  PLAN.md  README.md  TESTBED.md
configs/: camera-rightpad.vdf  default.vdf  face-labels.vdf  swapped-sticks.vdf  touch-dpad.vdf
python/: hello.py  pyproject.toml
rust/: Cargo.toml
rust/src/: evdev_main.rs  hid_main.rs  main.rs
src/: cli.rs  hostcheck.rs  install.rs  main.rs  manual.rs  state.rs  steamcheck.rs  vdf.rs
src/steam/: config.rs  mapping.rs  mod.rs
src/switch/: gadget.rs  mod.rs  protocol.rs  report.rs
